# cryptoWavy

./: LICENSE  README.md  package-lock.json
agent/: langgraph.json  pyproject.toml
agent/crypto/: agent.py  chat.py  cryptos.py  gecko.py  search.py  state.py
ui/: .gitignore  appwrite.json  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts
ui/functions/newsletter/: README.md  package-lock.json  package.json
ui/functions/newsletter/src/: main.cjs
ui/functions/newsletter/static/: index.html  success.html
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/api/generate-summary/: route.ts
ui/src/components/: AuthContext.tsx  AuthDialog.tsx  ChatInterface.tsx  CoinDialog.tsx  CryptoNews.tsx  CryptoTicker.tsx  FeaturedCoins.tsx  PortfolioManager.tsx  PriceChart.tsx
ui/src/components/ui/: select.tsx  sonner.tsx  toast.tsx
ui/src/lib/: appwrite.ts
